# small_projects

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pre_commit_install.sh  pyproject.toml  setup.cfg
mini_games/: bagels.py  leetcode.py  tprogger.py
