[tool.poetry]
name = "small-projects"
version = "0.1.0"
description = ""
authors = ["Yuriy <info@juriys.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pysimplegui = "^4.60.5"
pre-commit = "^3.6.0"
flake8 = "^7.0.0"
black = "^24.1.1"
isort = "^5.13.2"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
skip_gitignore = true
skip_glob = ["**/migrations/*", "**/settings/*"]
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
